--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ downloads/stream_20250601_012139.flv
 downloads/stream_20250601_012247.flv
 downloads/stream_20250601_012519.flv
 downloads/stream_20250601_012940.flv
+url.txt
