--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ downloads/stream_20250601_012247.flv
 downloads/stream_20250601_012519.flv
 downloads/stream_20250601_012940.flv
 url.txt
+url.txt
+downloads/stream_20250601_020349.flv
+downloads/stream_20250601_020510.flv
+url.txt
